<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <EditText
        android:id="@+id/postcode_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_margin="16dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/postcode_field"
        android:inputType="textCapWords"
        android:background="@android:color/white"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="submitPostcode"
        android:text="@string/submit_postcode_button"
        android:textAllCaps="true"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="detectLocation"
        android:text="@string/detect_location_button"
        android:textAllCaps="true"
        android:layout_gravity="center"/>

</LinearLayout>