<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="80dp"/>

<LinearLayout
    android:id="@+id/login_setup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/login_branding">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:hint="@string/username_field"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_field"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="logIn"
        android:text="@string/Login_button"
        android:textAllCaps="true"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="guestLogIn"
        android:text="@string/Guest_Login_button"
        android:textAllCaps="true"
        android:layout_gravity="center"/>

</LinearLayout>

</RelativeLayout>